...
                },
                confirmButton = {
                    TextButton(onClick = {
                        tempSelection?.let { onOptionSelected(it) }
                        showDialog = false
                    }) {
                        Text("OK", color = PurplePrimary)
                    }
                },
                dismissButton = {
                    TextButton(onClick = { showDialog = false }) {
                        Text("Cancel", color = Color.Gray)
                    }
                }
            )
        }
    }
}
...
